--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,14 @@
 
     </style>
 
+    <script>
+        window.addEventListener('message', (e) => {
+        const { type, mainDomain } = e.data;
+            if (type === 'rgs-backToHome') {
+                window.location.href = mainDomain;
+            }
+        });
+    </script>
 </body>
 
 </html>
