--- a/base-build/index.html
+++ b/base-build/index.html
@@ -132,6 +132,15 @@
         [ADITIONAL_STYLE]
     </style>
 
+    <script>
+        window.addEventListener('message', (e) => {
+        const { type, mainDomain } = e.data;
+            if (type === 'rgs-backToHome') {
+                window.location.href = mainDomain;
+            }
+        });
+    </script>
+
 </body>
 
 </html>
