Ajuste Rifa  * updates

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DEMO</title>
+    <title>Bet Social</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -25,58 +25,69 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
-    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
-    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">
 
-    <style>
-        :root {
-            --background: #181818;
-            --foreground: #FFFFFF;
+<!--    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">-->
+<!--    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">-->
+<!--    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">-->
 
-            --header: #0A0A09;
-            --foreground-header: #FFFFFF;
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="assets/site.webmanifest">
 
-            --sub-nav: #181818;
-            --foreground-sub-nav: #FFFFFF;
+    <link rel="stylesheet" href="assets/css/rifa.css">
 
-            --sidebars: #0A0A09;
-            --foreground-sidebars: #FFFFFF;
+<!--    <style>-->
+<!--        :root {-->
+<!--            &#45;&#45;background: #ffffff;-->
+<!--            &#45;&#45;foreground: #000;-->
 
-            --game: #0a0a09;
-            --foreground-game: #fff;
+<!--            &#45;&#45;header: #d6eeff;-->
+<!--            &#45;&#45;foreground-header: #FFFFFF;-->
 
-            --inputs-odds: #181818;
-            --foreground-inputs-odds: #FFFFFF;
+<!--            &#45;&#45;sub-nav: #3598cd;-->
+<!--            &#45;&#45;foreground-sub-nav: #FFFFFF;-->
 
-            --highlight: #35CD96;
-            --foreground-highlight: #181818;
+<!--            &#45;&#45;sidebars: #3598cd;-->
+<!--            &#45;&#45;foreground-sidebars: #137da6;-->
 
-            --sidebar-right: #0A0A09;
-            --foreground-sidebar-right: #ffffff;
+<!--            &#45;&#45;game: #3598cd;-->
+<!--            &#45;&#45;foreground-game: #000;-->
 
-            --sidebar-left: #0A0A09;
-            --foreground-sidebar-left: #ffffff;
+<!--            &#45;&#45;inputs-odds: #3598cd;-->
+<!--            &#45;&#45;foreground-inputs-odds: #ffffff;-->
 
-            --odds: #046eef;
-            --foreground-odds: #ffffff;
-            --foreground-selected-odds: #000000;
+<!--            &#45;&#45;highlight: #137da6;-->
+<!--            &#45;&#45;foreground-highlight: #ffffff;-->
 
-            --league: #e1e2e4;
-            --foreground-league: #455a64;
+<!--            &#45;&#45;sidebar-right: #cece1d;-->
+<!--            &#45;&#45;foreground-sidebar-right: #ffffff;-->
 
-            --event-time: #0A0A09;
-            --fg-event-time: #ffffff;
+<!--            &#45;&#45;sidebar-left: #d6eeff;-->
+<!--            &#45;&#45;foreground-sidebar-left: #ffffff;-->
 
-            --wb-warning: #FF0000;
+<!--            &#45;&#45;odds: #046eef;-->
+<!--            &#45;&#45;foreground-odds: #b21d1d;-->
+<!--            &#45;&#45;foreground-selected-odds: #000000;-->
 
-            --bottom-bar: #181818;
-            --foreground-bottom-bar: #aaaaaa;
+<!--            &#45;&#45;league: #e1e2e4;-->
+<!--            &#45;&#45;foreground-league: #455a64;-->
 
-            --background-rgb: 24, 24, 24;
-        }
-    </style>
+<!--            &#45;&#45;event-time: #0A0A09;-->
+<!--            &#45;&#45;fg-event-time: #ffffff;-->
+
+<!--            &#45;&#45;wb-warning: #f53f3f;-->
+
+<!--            &#45;&#45;bottom-bar: #3598cd;-->
+<!--            &#45;&#45;foreground-bottom-bar: #ffffff;-->
+
+<!--            &#45;&#45;background-rgb: 24, 24, 24;-->
+<!--        }-->
+<!--    </style>-->
     <!-- <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/demo.wee.bet/param/cores.css"> -->
     <script>
         function getAndroidVersion(ua) {
@@ -107,7 +118,7 @@
 
     <app-root>
         <div style="position: fixed;left: 50%;top: 50%;margin-left: -50px;margin-top: -50px;color: #fff;">
-            <img style="width: 100px;" src="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/logo_banca.png" alt="">
+            <img style="width: 100px;" src="assets/images/logo.png" alt="">
             <br>
             <div class="loading-app" style="text-align: center;">
                 Carregando...
