--- a/src/bilhete/index.html
+++ b/src/bilhete/index.html
@@ -25,7 +25,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilhete </title>
     <link rel="stylesheet" id="app-css" href="./app.css?v=24">
-    <link rel="shortcut icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">
+    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
 </head>
 
 <body>
@@ -52,6 +53,11 @@
                 Acompanhar Bilhete Ao Vivo
             </a>
         </div>
+        <div id="link-retornar-site" hidden>
+            <a class="btn" href="https://demo.wee.bet">
+                Voltar para site
+            </a>
+        </div>
     </div>
 
     <div id="alert-no-live" class="alert" role="alert" hidden>
@@ -73,7 +79,7 @@
         <span id="result"></span>
     </div>
     <div>
-        <strong>{{'geral.apostador' | translate}} :</strong>
+        <strong>Apostador :</strong>
         <span id="panter"></span>
     </div>
     <div>
@@ -105,7 +111,7 @@
         <span id="cash-back"></span>
     </div>
     <div>
-        <strong>{{'geral.premio' | translate}} :</strong>
+        <strong>Prêmio :</strong>
         <span id="award"></span>
     </div>
     <div hidden>
@@ -122,8 +128,8 @@
     </div>
 </div>
 
-<script src="./app-service.js?v=24"></script>
-<script src="./app.js?v=24"></script>
+<script src="./app-service.js?v=25"></script>
+<script src="./app.js?v=25"></script>
 </body>
 
 </html>
