--- a/base-build/index.html
+++ b/base-build/index.html
@@ -149,6 +149,7 @@
             }
         }
     </script>
+    <script type="text/javascript" src="https://cd823ed6-bffb-4764-9e1b-05566f369c8c.snippet.anjouangaming.org/anj-seal.js"></script>
 </head>
 
 <body class="dark">
