--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DEMO</title>
+    <title>ZILIONZ</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,9 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
 
-    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
-    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
-    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">
+    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/icone_app.png">
+    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/icone_app.png">
+    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/favicon.ico">
 
     <style>
         :root {
@@ -124,15 +124,15 @@
             --foreground-bottom-bar-rgb: 170, 170, 170;
         }
     </style>
-    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/demo.wee.bet/param/cores.css?v=1719360229">
+    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/zilionz.com/param/cores.css?v=1720115889">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="DEMO">
-    <meta property="og:description" content="DEMO é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website DEMO, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. DEMO apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
-    <meta property="og:url" content="central.demo.wee.bet">
-    <meta property="og:image" content="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
-    <meta property="og:image:alt" content="LOGO DEMO">
-    <meta name="description" content="DEMO é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website DEMO, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. DEMO apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
+    <meta property="og:title" content="ZILIONZ">
+    <meta property="og:description" content="ZILIONZ é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website ZILIONZ, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. ZILIONZ apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
+    <meta property="og:url" content="central.zilionz.com">
+    <meta property="og:image" content="https://weebet.s3.amazonaws.com/zilionz.com/logos/icone_app.png">
+    <meta property="og:image:alt" content="LOGO ZILIONZ">
+    <meta name="description" content="ZILIONZ é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website ZILIONZ, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. ZILIONZ apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
 
     <script>
         function getAndroidVersion(ua) {
@@ -145,10 +145,11 @@
 
         if (parseInt(getAndroidVersion()) <= 7) {
             if (location.search.indexOf('app') >= 0) {
-                window.location.href = 'https://demo.wee.bet/client-light/?config=true&host=central.demo.wee.bet&slug=demo.wee.bet&nome=DEMO'
+                window.location.href = 'https://zilionz.com/client-light/?config=true&host=central.zilionz.com&slug=zilionz.com&nome=ZILIONZ'
             }
         }
     </script>
+    <script type="text/javascript" src="https://cd823ed6-bffb-4764-9e1b-05566f369c8c.snippet.anjouangaming.org/anj-seal.js"></script>
 </head>
 
 <body class="dark">
@@ -163,7 +164,7 @@
 
     <app-root>
         <div style="position: fixed;left: 50%;top: 50%;margin-left: -50px;margin-top: -50px;color: #fff;">
-            <img style="width: 100px;" src="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/logo_banca.png" alt="">
+            <img style="width: 100px;" src="https://weebet.s3.amazonaws.com/zilionz.com/logos/logo_banca.png" alt="">
             <br>
             <div class="loading-app" style="text-align: center;">
                 Carregando...
