--- a/base-build/index.html
+++ b/base-build/index.html
@@ -164,7 +164,7 @@
     <app-root>
         <div style="position: absolute;left: 50%;top: 50%; transform: translate(-50%, -50%);color: #fff;">
             <div style="margin-bottom: 32px; display: flex;">
-                <img style="width: 200px;" src="https://weebet.s3.amazonaws.com/[S3_FOLDER]/logos/logo_banca.png" alt="">
+                <img style="max-width: 250px; max-height: 164px;" src="https://weebet.s3.amazonaws.com/[S3_FOLDER]/logos/logo_banca.png" alt="">
             </div>
             <div class="loading-app" style="position: relative;">
                 <div class="lds-ring" style="left: 50%; margin-left: -32px; top: 0; margin-top: 0; position: inherit;">
