--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Rio Jogos</title>
+    <title>WEEBET</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -29,9 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
 
-    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/riojogos.com/logos/icone_app.png">
-    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/riojogos.com/logos/icone_app.png">
-    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/riojogos.com/logos/favicon.ico">
+    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">
 
     <style>
         :root {
@@ -124,15 +124,15 @@
             --foreground-bottom-bar-rgb: 170, 170, 170;
         }
     </style>
-    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/riojogos.com/param/cores.css?v=1720230350">
+    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/demo.wee.bet/param/cores.css?v=1720230350">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Rio Jogos">
-    <meta property="og:description" content="Rio Jogos é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website Rio Jogos, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. Rio Jogos apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
-    <meta property="og:url" content="central.riojogos.com">
-    <meta property="og:image" content="https://weebet.s3.amazonaws.com/riojogos.com/logos/icone_app.png">
-    <meta property="og:image:alt" content="LOGO Rio Jogos">
-    <meta name="description" content="Rio Jogos é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website Rio Jogos, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. Rio Jogos apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
+    <meta property="og:title" content="WEEBET">
+    <meta property="og:description" content="WEEBET é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website WEEBET, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. WEEBET apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
+    <meta property="og:url" content="central.demo.wee.bet">
+    <meta property="og:image" content="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <meta property="og:image:alt" content="LOGO WEEBET">
+    <meta name="description" content="WEEBET é um site de entretenimento online que oferece a seus usuários uma experiência única em apostas. Ao acessar, continuar a utilizar ou navegar no website WEEBET, você aceita que utilizemos certos cookies de navegador visando melhorar a sua experiência enquanto utiliza nosso site. WEEBET apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.">
 
     <script>
         function getAndroidVersion(ua) {
@@ -145,7 +145,7 @@
 
         if (parseInt(getAndroidVersion()) <= 7) {
             if (location.search.indexOf('app') >= 0) {
-                window.location.href = 'https://riojogos.com/client-light/?config=true&host=central.riojogos.com&slug=riojogos.com&nome=Rio Jogos'
+                window.location.href = 'https://demo.wee.bet/client-light/?config=true&host=central.demo.wee.bet&slug=demo.wee.bet&nome=WEEBET'
             }
         }
     </script>
