--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
 
-    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/icone_app.png">
-    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/icone_app.png">
-    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/zilionz.com/logos/favicon.ico">
+    <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/icone_app.png">
+    <link rel="icon" type="image/x-icon" href="https://weebet.s3.amazonaws.com/demo.wee.bet/logos/favicon.ico">
 
     <style>
         :root {
