--- a/base-build/index.html
+++ b/base-build/index.html
@@ -134,6 +134,8 @@
     <meta property="og:image:alt" content="LOGO [BANCA]">
     <meta name="description" content="[DESCRIPTION]">
 
+    <script src="https://ui.invisiblesport.com/bt-renderer.min.js"></script>
+
     <script>
         function getAndroidVersion(ua) {
             ua = (ua || navigator.userAgent).toLowerCase();
@@ -172,7 +174,7 @@
                     <div></div>
                     <div></div>
                     <div></div>
-                </div>   
+                </div>
             </div>
         </div>
     </app-root>
