--- a/base-build/bilhete/index.html
+++ b/base-build/bilhete/index.html
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div id="link-retornar-site" hidden>
-            <a class="btn" href="https://demo.wee.bet">
+            <a class="btn" href="https://[S3_FOLDER]">
                 Voltar para site
             </a>
         </div>
