--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/ragnar.bet/param/cores.css?v=1720842027"> -->
     <title>Vite App</title>
   </head>
   <body>
