--- a/base-build/index.html
+++ b/base-build/index.html
@@ -26,7 +26,7 @@
 
     [PIXEL]
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />.
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
 
