--- a/base-build/index.html
+++ b/base-build/index.html
@@ -125,7 +125,7 @@
             --foreground-bottom-bar-rgb: 170, 170, 170;
         }
     </style>
-    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/demo.wee.bet/param/cores.css?v=1720842027">
+    <link rel="stylesheet" href="https://weebet.s3.amazonaws.com/[S3_FOLDER]/param/cores.css?v=[TIMESTAMP]">
     <meta property="og:type" content="website">
     <meta property="og:title" content="[BANCA]">
     <meta property="og:description" content="[DESCRIPTION]">
