--- a/base-build/index.html
+++ b/base-build/index.html
@@ -28,7 +28,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://cdn.wee.bet/fonts/remix-icon/remixicon.css" />
+    <link rel="stylesheet" href="https://wb-assets.com/fonts/remix-icon/remixicon.css" />
 
     <link rel="apple-touch-icon" href="https://weebet.s3.amazonaws.com/[S3_FOLDER]/logos/icone_app.png">
     <link rel="shortcut icon" type="image/png" href="https://weebet.s3.amazonaws.com/[S3_FOLDER]/logos/icone_app.png">
