--- a/base-build/index.html
+++ b/base-build/index.html
@@ -8,8 +8,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- <link rel="manifest" href="manifest.webmanifest"> -->
-    <!-- <meta name="theme-color" content="#1976d2"> -->
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#1976d2">
 
     <!-- Google Tag Manager -->
     <script>
